--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,4 @@ org.gradle.jvmargs=-Xmx1G
 # Dependencies
 	# check this on https://modmuss50.me/fabric.html
 	fabric_version=0.77.0+1.18.2
+	libgui_version=5.4.2+1.18.2
