--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ org.gradle.jvmargs=-Xmx1G
 
 # Mod Properties
 	mod_version = 0.1.0-SNAPSHOT
-	maven_group = my.wirelesseye
+	maven_group = io.github.wirelesseye
 	archives_base_name = Humanity
 
 # Dependencies
